permission fixes and swagger
